# friendly-octo-invention

./: .env.example  .gitignore  Dockerfile  GITHUB_ACTIONS_SETUP.md  Procfile  README.md  app.json  config.py  email_sender.py  main.py  news_analyzer.py  news_scraper.py  pyproject.toml  requirements.txt  setup-workflows.py
